--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 <head>
   <title>CSS練習</title>
+  <link rel="stylesheet"href="css/default.css"type="text/css">
+</head>
+  
+  //背景画像
+  body{
+    background-color:#ff6600;
+    background-image:url(/img/~~~~~~.png);  //画像リンク
+    background-repeat:repeat-x;
+  }  
+  
   
   //型
   h1 span{
@@ -29,9 +39,4 @@
     text-align:center;
   }
   
-  //背景画像
-  body{
-      background-color:#ff6600;
-      background-image:url(/img/~~~~~~.png);  //画像リンク
-      background-repeat:repeat-x;
-  }
+
