--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 <head>
   <title>CSS練習</title>
   <link rel="stylesheet"href="css/default.css"type="text/css">
+  
+  <style>
+    @import url("css/default.css");
+  </style>
+  
 </head>
 </html> 
