--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     @import url("css/default.css");
   </style>
   
+  <body>
+    <h1>あああああ</h1>  
+    <p>いうえお</p>
+  </body>
+  
 </head>
 </html> 
