--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <title>CSS練習</title>
   <link rel="stylesheet"href="css/default.css"type="text/css">
   
+  body {
+background-color: #fbf9cc;
+color: #fbf9cc;
+}
+  
   <style>
     @import url("css/default.css");
   </style>
