--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
   <title>CSS練習</title>
   <link rel="stylesheet"href="css/default.css"type="text/css">
-  
-  body {
-background-color: #fbf9cc;
-color: #fbf9cc;
-}
-  
+    
   <style>
     @import url("css/default.css");
   </style>
@@ -17,6 +12,8 @@ color: #fbf9cc;
     <h1>あああああ</h1>  
     <h2><span>●</span>いうえお<span>●</span></h2>
   </body>
+  
+  <p><span class="fox male"><a href="http://www.t-kougei.ac.jp/index.html">工芸大</a></span></p>
   
 </head>
 </html> 
