--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2><span>●</span>いうえお<span>●</span></h2>
   </body>
   
-  <p><span class="fox male"><a href="http://www.t-kougei.ac.jp/index.html">工芸大</a></span></p>
+  //<p><span class="fox male"><a href="http://www.t-kougei.ac.jp/index.html">工芸大</a></span></p>
   
 </head>
 </html> 
