--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </style>
   
   <body>
-    <h1>あああああ</h1>  
+    <h1><h3>あ</h3>ああああ</h1>  
     <h2><span>●</span>いうえお<span>●</span></h2>
   </body>
   
-  //<p><span class="fox male"><a href="http://www.t-kougei.ac.jp/index.html">工芸大</a></span></p>
+
   
 </head>
 </html> 
