--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </style>
   
   <body>
-    <h1><h3>あ</h3>ああああ</h1>  
+    <h3>あ</h3><h1>ああああ</h1>  
     <h2><span>●</span>いうえお<span>●</span></h2>
   </body>
   
