--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <body>
     <h3>あ</h3><h1>ああああ</h1>  
     <h2><span>●</span>いうえお<span>●</span></h2>
+    
+    <p id="lead">aiueo</p>
+    
   </body>
   
 
