--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2><span>●</span>いうえお<span>●</span></h2>
     
     <p id="lead">aiueo</p>
+    <p class="greeting">おはよう</p>
     
   </body>
   
